k8s/auth-api.yaml
# ─────────────────────────────────────────
# AUTH-API  ·  Go  ·  puerto 8000
# Depende de users-api → arrancamos users-api primero
# ─────────────────────────────────────────
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
        tier: backend
    spec:
      containers:
        - name: auth-api
          image: kaeltobias/auth-api:v1
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api
  namespace: backend
spec:
  selector:
    app: auth-api
  ports:
    - port: 8000
      targetPort: 8000
