k8s/todos-api.yaml
# ─────────────────────────────────────────
# TODOS-API  ·  NodeJS  ·  puerto 8082
# Depende de redis
# ─────────────────────────────────────────
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-api
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-api
  template:
    metadata:
      labels:
        app: todos-api
        tier: backend
    spec:
      containers:
        - name: todos-api
          image: kaeltobias/todos-api:v1
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: todos-api
  namespace: backend
spec:
  selector:
    app: todos-api
  ports:
    - port: 8082
      targetPort: 8082
