k8s/users-api.yaml
# ─────────────────────────────────────────
# USERS-API  ·  Spring Boot  ·  puerto 8083
# ─────────────────────────────────────────
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
      labels:
        app: users-api
        tier: backend
    spec:
      containers:
        - name: users-api
          image: kaeltobias/users-api:v1
          ports:
            - containerPort: 8083
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "400m"
---
apiVersion: v1
kind: Service
metadata:
  name: users-api
  namespace: backend
spec:
  selector:
    app: users-api
  ports:
    - port: 8083
      targetPort: 8083
