k8s/zipkin.yaml
# ─────────────────────────────────────────
# ZIPKIN  ·  Distributed Tracing
# Namespace: observability
# ─────────────────────────────────────────
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
        tier: observability
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin:2
          ports:
            - containerPort: 9411
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: observability
spec:
  selector:
    app: zipkin
  ports:
    - port: 9411
      targetPort: 9411
  type: NodePort
